# blabber

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.py  requirements.txt
database-plugin/src/: CMakeLists.txt  common.hpp  database.cpp  fixed_string.hpp  module.cpp  storage.cpp  storage.hpp
src/: CMakeLists.txt  database.cpp  database.hpp  fixed_string.hpp  main.cpp  module.cpp  storage.hpp
static/: blabber.css
templates/: base.html  index.html  post.html
